# Slide-Builder

./: .gitignore  README.md
agent/: README.md  agent.py
agent/core/: config.py  event_log.py  publisher.py
agent/logs/: events.jsonl
agent/presentation/: context.py  markdown.py  models.py  service.py
agent/prompts/: presentation_agent.md
agent/services/: llm.py
agent/tools/: __init__.py  navigation.py  presentation.py
backend/: .env.example  agent.py  pyproject.toml
backend/core/: events.py
backend/presentation/: __init__.py  models.py  service.py
backend/prompts/: presentation_agent.md
backend/tools/: context.py  presentation.py
web/: .env.example  README.md  components.json  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/export/slides/: route.ts
web/src/app/api/export/slides/[id]/: route.ts
web/src/app/api/token/: route.ts
web/src/app/export/slides/[id]/: page.tsx
web/src/components/: AgentPanel.tsx  Presentation.tsx  SlideBuilderApp.tsx  SlidePrintExport.tsx
web/src/components/agents-ui/: agent-chat-transcript.tsx  agent-control-bar.tsx  agent-track-control.tsx  agent-track-toggle.tsx
web/src/components/ai-elements/: conversation.tsx
web/src/hooks/: useLiveKitEvents.ts  usePresentation.ts
web/src/hooks/agents-ui/: use-agent-audio-visualizer-bar.ts  use-agent-control-bar.ts
web/src/lib/: logger.ts  slide-export-store.ts
web/src/services/: livekit.ts
web/src/types/: presentation.ts
