[project]
name = "slide-builder-agent"
version = "0.1.0"
description = "AI voice presentation backend powered by LiveKit Agents."
requires-python = ">=3.11"
dependencies = [
  "livekit-agents",
  "livekit-plugins-silero",
  "pydantic>=2",
  "python-dotenv",
]

[tool.setuptools]
packages = ["core", "presentation", "services", "tools"]
